optimize code (more readable), fix checkbox position

--- a/css/styles.css
+++ b/css/styles.css
@@ -511,7 +511,7 @@ img {
 }
 
 .sub-footer {
-    margin: 0 auto;
+    margin-left: auto;
 }
 
 .btn.footer-btn:hover,
@@ -557,9 +557,6 @@ img {
     
     width: 100%;
     height: 100%;
-    /* display: flex;
-    justify-content: center;
-    align-items: center; */
     
     background-color: rgba(46, 47, 66, 0.4);
 
@@ -636,11 +633,6 @@ img {
     fill: #fff;
 }
 
-.form-item {
-    position: relative;
-    margin-bottom: 24px;
-}
-
 .modal-text {
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
@@ -649,39 +641,52 @@ img {
     letter-spacing: 0.02em;
     text-align: center;
     color: #2e2f42;
+
+    margin-bottom: 16px;
+}
+
+.modal-form-item {
+    margin-bottom: 8px;
 }
 
 .form-label {
-    font-family: "Roboto", sans-serif;
+    color: #8e8f99;
     font-weight: 400;
     font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.04em;
-    color: #8e8f99;
-    display: block;
 
-    width: 100%;
+    display: inline-block;
+    margin-bottom: 4px;
 }
 
-.input-wrapper {
+.form-input-container {
     position: relative;
 }
 
 .form-input {
-    background-color: transparent;
     width: 100%;
+    height: 40px;
 
-    outline: transparent;
+    background-color: transparent;
     border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 4px;
-    outline: none;
-    height: 40px;
+    outline: transparent;
     padding-left: 38px;
 
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.label-icon {
+.form-input:focus,
+.form-textarea:focus {
+    border: 1px solid var(--icon-second-color);
+}
+
+.form-input:focus + .form-input-icon {
+    fill: var(--icon-second-color);
+}
+
+.form-input-icon {
     fill: #2e2f42;
     position: absolute;
     top: 50%;
@@ -691,81 +696,72 @@ img {
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-input:focus,
-.text-input:focus {
-    border: 1px solid #4d5ae5;
-}
-
-.form-input:focus + .label-icon {
-    fill: #4d5ae5;
-}
-
-.text-input,
-.modal-accept {
-    font-family: "Roboto", sans-serif;
+.form-textarea {
     font-weight: 400;
     font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.04em;
-}
 
-.text-input {
-    width: 360px;
+    width: 100%;
     height: 120px;
     padding: 8px 16px;
-    /* margin-bottom: 16px; */
-
-    color: rgba(46, 47, 66, 0.4);
-    background-color: transparent;
     border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 4px;
     outline: transparent;
 
-    outline: none;
     resize: none;
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-accept-text {
-    color: #8e8f99;
+.form-textarea::placeholder {
+    color: rgba(46, 47, 66, 0.4);
 }
 
-.modal-check-link {
-    color: #4d5ae5;
-    text-decoration: underline;
-}
-
-.modal-btn {
-    min-width: 169px;
-    margin: 0 auto;
-    margin-top: 24px;
-}
-
-.modal-checkbox {
-    position: absolute;
-    top: 0;
-    left: 0;
-    
+.checkbox {
     display: inline-flex;
     justify-content: center;
     align-items: center;
+
     width: 16px;
     height: 16px;
-
-    background-color: transparent;
     border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 2px;
-    box-shadow: none;
-    fill: transparent;
 
     margin-right: 8px;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
-                border 250ms cubic-bezier(0.4, 0, 0.2, 1), 
-                fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+                background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-input:checked+label>.modal-checkbox {
-    background-color: #4d5ae5;
+.hidden-checkbox:checked+.label-privacy>.checkbox {
     border: none;
-    fill: #fff;
+    background-color: var(--icon-second-color);
+}
+
+.checkbox-icon {
+    fill: transparent;
+
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.hidden-checkbox:checked+.label-privacy>.checkbox>.checkbox-icon {
+    fill: var(--icon-color);
+}
+
+.label-privacy {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
+}
+
+.form-link {
+    color: var(--icon-second-color);
+    line-height: 1.3;
+    text-decoration: underline;
+    text-decoration-skip-ink: none;
+}
+
+.form-btn {
+    margin-top: 24px;
 }
